--- a/app/src/main/res/layout/activity_layout_assignment.xml
+++ b/app/src/main/res/layout/activity_layout_assignment.xml
@@ -14,8 +14,10 @@
         android:id="@+id/als_tvDate"
         android:layout_width="60dp"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:paddingLeft="5dp"
         android:text="09 / 20"
-        android:textAlignment="center"
+        android:textAlignment="textStart"
         android:textColor="@color/colorAccent"
         android:textSize="14sp"
         android:textStyle="bold" />
@@ -25,28 +27,31 @@
         android:layout_width="60dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
+        android:layout_weight="1"
         android:text="07:45"
-        android:textAlignment="center"
+        android:textAlignment="textStart"
         android:textColor="@color/colorAccent"
         android:textSize="14sp"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/als_tvTitle"
-        android:layout_width="120dp"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:text="Assignment 5"
-        android:textAlignment="center"
+        android:textAlignment="textStart"
         android:textColor="@color/colorAccent"
         android:textSize="14sp"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/als_tvModule"
-        android:layout_width="100dp"
+        android:layout_width="70dp"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:text="WRAP302"
-        android:textAlignment="center"
+        android:textAlignment="textStart"
         android:textColor="@color/colorAccent"
         android:textSize="14sp"
         android:textStyle="bold" />
