--- a/app/src/main/res/layout/home_layout.xml
+++ b/app/src/main/res/layout/home_layout.xml
@@ -155,42 +155,42 @@
 
                         <TextView
                             android:id="@+id/textView24"
-                            android:layout_width="wrap_content"
+                            android:layout_width="60dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="0.3"
+                            android:layout_weight="1"
                             android:text="Date"
-                            android:textAlignment="center" />
+                            android:textAlignment="textStart" />
 
                         <TextView
                             android:id="@+id/textView25"
-                            android:layout_width="wrap_content"
+                            android:layout_width="60dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="0.7"
+                            android:layout_weight="1"
                             android:text="Time"
-                            android:textAlignment="center" />
+                            android:textAlignment="textStart" />
 
                         <TextView
                             android:id="@+id/textView26"
-                            android:layout_width="wrap_content"
+                            android:layout_width="160dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1.2"
+                            android:layout_weight="1"
                             android:text="Title"
-                            android:textAlignment="center" />
+                            android:textAlignment="textStart" />
 
                         <TextView
                             android:id="@+id/textView28"
-                            android:layout_width="wrap_content"
+                            android:layout_width="70dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="0.8"
+                            android:layout_weight="1"
                             android:text="Module"
-                            android:textAlignment="center" />
+                            android:textAlignment="textStart" />
                     </LinearLayout>
 
                     <ListView
                         android:id="@+id/home_lvAssignments"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:dividerHeight="5dp" />
+                        android:layout_marginRight="5dp" />
 
                 </LinearLayout>
 
@@ -232,42 +232,42 @@
 
                         <TextView
                             android:id="@+id/textView29"
-                            android:layout_width="wrap_content"
+                            android:layout_width="60dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="0.3"
+                            android:layout_weight="1"
                             android:text="Date"
-                            android:textAlignment="center" />
+                            android:textAlignment="textStart" />
 
                         <TextView
                             android:id="@+id/textView30"
-                            android:layout_width="wrap_content"
+                            android:layout_width="60dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="0.7"
+                            android:layout_weight="1"
                             android:text="Time"
-                            android:textAlignment="center" />
+                            android:textAlignment="textStart" />
 
                         <TextView
                             android:id="@+id/textView31"
-                            android:layout_width="wrap_content"
+                            android:layout_width="160dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1.2"
+                            android:layout_weight="1"
                             android:text="Venue"
-                            android:textAlignment="center" />
+                            android:textAlignment="textStart" />
 
                         <TextView
                             android:id="@+id/textView32"
-                            android:layout_width="wrap_content"
+                            android:layout_width="70dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="0.8"
+                            android:layout_weight="1"
                             android:text="Module"
-                            android:textAlignment="center" />
+                            android:textAlignment="textStart" />
                     </LinearLayout>
 
                     <ListView
                         android:id="@+id/home_lvTests"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:dividerHeight="5dp" />
+                        android:layout_marginRight="5dp" />
 
                 </LinearLayout>
 
