--- a/app/src/main/res/layout/home_layout.xml
+++ b/app/src/main/res/layout/home_layout.xml
@@ -24,7 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="2dp"
-            android:text="Monday - 21 August 2017"
+            android:text="Wednesday - 20 September 2017"
             android:textAlignment="center"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="20sp"
@@ -190,7 +190,8 @@
                         android:id="@+id/home_lvAssignments"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_marginRight="5dp" />
+                        android:layout_marginRight="5dp"
+                        android:dividerHeight="5dp" />
 
                 </LinearLayout>
 
@@ -267,7 +268,8 @@
                         android:id="@+id/home_lvTests"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_marginRight="5dp" />
+                        android:layout_marginRight="5dp"
+                        android:dividerHeight="5dp" />
 
                 </LinearLayout>
 
