--- a/app/src/main/res/layout/maintain_test_layout.xml
+++ b/app/src/main/res/layout/maintain_test_layout.xml
@@ -40,38 +40,49 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/tvMA_Date"
-            android:layout_width="wrap_content"
+            android:id="@+id/textView29"
+            android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Date" />
+            android:text="Date"
+            android:textAlignment="textStart" />
 
         <TextView
-            android:id="@+id/tvMA_Time"
-            android:layout_width="wrap_content"
+            android:id="@+id/textView30"
+            android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Time" />
+            android:text="Time"
+            android:textAlignment="textStart" />
 
         <TextView
-            android:id="@+id/tvMA_Title"
-            android:layout_width="wrap_content"
+            android:id="@+id/textView31"
+            android:layout_width="160dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Venue" />
+            android:text="Venue"
+            android:textAlignment="textStart" />
+
+        <TextView
+            android:id="@+id/textView32"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Module"
+            android:textAlignment="textStart" />
     </LinearLayout>
 
     <ListView
+        android:id="@+id/mt_lvTests"
         android:layout_width="match_parent"
         android:layout_height="250dp"
-        android:layout_marginBottom="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp" />
+        android:layout_margin="5dp"
+        android:dividerHeight="5dp" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fabNewTest"
