--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -34,7 +34,9 @@
             android:layout_marginStart="12dp"
             android:layout_marginTop="28dp"
             android:text="Student Number:"
-            android:textAppearance="@android:style/TextAppearance.Material.Large" />
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/txtUserName"
@@ -53,7 +55,9 @@
             android:layout_marginStart="12dp"
             android:layout_marginTop="28dp"
             android:text="Password:"
-            android:textAppearance="@android:style/TextAppearance.Material.Large" />
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/txtPassword"
@@ -73,11 +77,15 @@
 
             <Button
                 android:id="@+id/btnLogin"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Login"
+                android:layout_width="200dp"
+                android:layout_height="60dp"
                 android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true" />
+                android:layout_centerHorizontal="true"
+                android:backgroundTint="@color/colorPrimary"
+                android:onClick="login"
+                android:text="login"
+                android:textSize="18sp"
+                android:textStyle="bold" />
         </RelativeLayout>
 
     </LinearLayout>
