--- a/app/src/main/res/layout/maintain_test_new_test.xml
+++ b/app/src/main/res/layout/maintain_test_new_test.xml
@@ -20,7 +20,7 @@
         android:textSize="20sp" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/txtMT_Title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -103,7 +103,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btnCreateTest"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginLeft="100dp"
