--- a/app/src/main/res/layout/maintain_lecture_times_layout.xml
+++ b/app/src/main/res/layout/maintain_lecture_times_layout.xml
@@ -61,6 +61,7 @@
         android:layout_marginTop="25dp">
 
         <ListView
+            android:id="@+id/lv_LectureTimes"
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:layout_alignParentStart="true"
@@ -70,7 +71,7 @@
         </ListView>
 
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/floatingActionButton2"
+            android:id="@+id/fabSaveLectures"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
