Commit #C46 - Finished Maintain Lecture Times & Refresh Database
• Fixed Delete Query
• Added Listener when checkboxed clicked to set selected state
• instead of adding to a List I just directly delete the Lecture from local Database.

--- a/app/src/main/res/layout/activity_maintain_lectures_adapter.xml
+++ b/app/src/main/res/layout/activity_maintain_lectures_adapter.xml
@@ -3,10 +3,10 @@
     android:id="@+id/linLayLectureSelection"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginLeft="15dp"
+    android:layout_marginRight="15dp"
     android:background="@android:color/holo_blue_dark"
-    android:orientation="horizontal"
-    android:paddingBottom="7dp"
-    android:paddingTop="7dp">
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/tvLect4"
@@ -55,6 +55,5 @@
     <CheckBox
         android:id="@+id/cbLectureSelection"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1" />
+        android:layout_height="wrap_content" />
 </LinearLayout>
