--- a/app/src/main/res/layout/activity_layout_lecture.xml
+++ b/app/src/main/res/layout/activity_layout_lecture.xml
@@ -36,6 +36,17 @@
         android:textStyle="bold" />
 
     <TextView
+        android:id="@+id/tvValue4"
+        android:layout_width="40dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="L"
+        android:textAlignment="textStart"
+        android:textColor="@color/colorAccent"
+        android:textSize="14sp"
+        android:textStyle="bold" />
+
+    <TextView
         android:id="@+id/tvActValue3"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
