--- a/app/src/main/res/layout/maintain_lecture_times_layout.xml
+++ b/app/src/main/res/layout/maintain_lecture_times_layout.xml
@@ -66,7 +66,8 @@
             android:layout_height="250dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_margin="15dp">
+            android:layout_margin="15dp"
+            android:dividerHeight="5dp">
 
         </ListView>
 
