Commit #C51 - Fixed EditTest Fragment & added more Dummy Data
• Fixed EditTestFragment crashing since it was calling wrong method
   ♦ Was calling getAssignment stuff instead of getTest stuff
• Added Jacques Time Table

--- a/app/src/main/res/layout/home_layout.xml
+++ b/app/src/main/res/layout/home_layout.xml
@@ -167,6 +167,7 @@
                             android:layout_width="60dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:paddingLeft="2dp"
                             android:text="Time"
                             android:textAlignment="textStart" />
 
@@ -245,6 +246,7 @@
                             android:layout_width="60dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:paddingLeft="2dp"
                             android:text="Time"
                             android:textAlignment="textStart" />
 
