--- a/app/src/main/res/layout/maintain_assignment_new_assignment.xml
+++ b/app/src/main/res/layout/maintain_assignment_new_assignment.xml
@@ -15,7 +15,7 @@
         android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Assignment TItle"
+        android:text="Assignment Title"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="20sp" />
 
@@ -26,7 +26,8 @@
         android:layout_marginTop="10dp"
         android:ems="10"
         android:hint="Title"
-        android:inputType="text" />
+        android:inputType="text"
+        android:maxLength="20"/>
 
     <TextView
         android:id="@+id/textView3"
