--- a/app/src/main/res/layout/maintain_assignment_new_assignment.xml
+++ b/app/src/main/res/layout/maintain_assignment_new_assignment.xml
@@ -49,7 +49,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:layout_weight="5.67"
-            android:text="DD/MM/YYYY"
+            android:hint="DD-MM-YYYY"
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -86,7 +86,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:layout_weight="4.63"
-            android:text="AA:BB"
+            android:hint="AA:BB"
             android:textSize="20sp"
             android:textStyle="bold" />
 
