--- a/app/src/main/res/layout/maintain_test_layout.xml
+++ b/app/src/main/res/layout/maintain_test_layout.xml
@@ -18,23 +18,43 @@
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="0dp" />
 
-    <Spinner
-        android:id="@+id/spnModulesTest"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginTop="15dp"
-        android:entries="@array/modules"
-        android:paddingBottom="25dp"
-        android:paddingTop="25dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="0dp" />
+        android:orientation="horizontal">
+
+        <Spinner
+            android:id="@+id/spnModulesTest"
+            android:layout_width="271dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:entries="@array/modules"
+            android:paddingBottom="10dp"
+            android:paddingRight="10dp"
+            android:paddingTop="10dp"
+            tools:layout_editor_absoluteX="8dp"
+            tools:layout_editor_absoluteY="0dp" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fabNewTest"
+            android:layout_width="42dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_marginLeft="30dp"
+            android:clickable="true"
+            android:scaleType="center"
+            app:backgroundTint="@color/colorPrimary"
+            app:elevation="5dp"
+            app:fabSize="normal"
+            app:srcCompat="@drawable/ic_add_black_24dp"
+            tools:layout_editor_absoluteX="264dp"
+            tools:layout_editor_absoluteY="29dp" />
+    </LinearLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_margin="10dp"
+        android:layout_margin="5dp"
         android:background="@android:color/darker_gray" />
 
     <LinearLayout
@@ -77,30 +97,54 @@
             android:textAlignment="textStart" />
     </LinearLayout>
 
+    <View
+        android:id="@+id/view8"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_margin="5dp"
+        android:background="@android:color/darker_gray" />
+
+    <TextView
+        android:id="@+id/textView36"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:text="Upcoming Tests"
+        android:textSize="12sp" />
+
+    <View
+        android:id="@+id/view9"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_margin="5dp"
+        android:background="@android:color/darker_gray" />
+
     <ListView
         android:id="@+id/mt_lvTests"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="160dp"
         android:layout_margin="5dp"
         android:dividerHeight="5dp" />
+
+    <TextView
+        android:id="@+id/textView37"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:text="Past Tests"
+        android:textSize="12sp" />
+
+    <View
+        android:id="@+id/view10"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_margin="5dp"
+        android:background="@android:color/darker_gray" />
 
     <ListView
         android:id="@+id/mt_lvTestsPast"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fabNewTest"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_weight="0.03"
-        android:clickable="true"
-        app:backgroundTint="@color/colorPrimary"
-        app:elevation="5dp"
-        app:fabSize="normal"
-        app:srcCompat="@drawable/ic_add_black_24dp"
-        tools:layout_editor_absoluteX="264dp"
-        tools:layout_editor_absoluteY="29dp" />
+        android:layout_height="match_parent"
+        android:dividerHeight="5dp" />
 
 </LinearLayout>
