--- a/app/src/main/res/layout/maintain_assignment_layout.xml
+++ b/app/src/main/res/layout/maintain_assignment_layout.xml
@@ -22,26 +22,25 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:orientation="horizontal">
 
         <Spinner
             android:id="@+id/spnModulesAssignment"
-            android:layout_width="253dp"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="10dp"
             android:entries="@array/modules"
-            android:paddingBottom="10dp"
-            android:paddingTop="10dp"
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="0dp" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fabNewAssignment"
-            android:layout_width="40dp"
+            android:layout_width="42dp"
             android:layout_height="42dp"
             android:layout_gravity="center"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="5dp"
             android:clickable="true"
             android:scaleType="center"
             app:backgroundTint="@color/colorPrimary"
@@ -51,6 +50,13 @@
             tools:layout_editor_absoluteX="264dp"
             tools:layout_editor_absoluteY="29dp" />
     </LinearLayout>
+
+    <View
+        android:id="@+id/view7"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_margin="10dp"
+        android:background="@android:color/darker_gray" />
 
     <LinearLayout
         android:layout_width="match_parent"
