--- a/app/src/main/res/layout/maintain_test_layout.xml
+++ b/app/src/main/res/layout/maintain_test_layout.xml
@@ -21,26 +21,25 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:orientation="horizontal">
 
         <Spinner
             android:id="@+id/spnModulesTest"
-            android:layout_width="271dp"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:entries="@array/modules"
-            android:paddingBottom="10dp"
-            android:paddingRight="10dp"
-            android:paddingTop="10dp"
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="0dp" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fabNewTest"
             android:layout_width="42dp"
-            android:layout_height="match_parent"
+            android:layout_height="42dp"
             android:layout_gravity="center"
-            android:layout_marginLeft="30dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="5dp"
             android:clickable="true"
             android:scaleType="center"
             app:backgroundTint="@color/colorPrimary"
